[package]
name = "np-ntt"
version = "0.1.0"
edition = "2021"

[lib]
name = "np_ntt"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numpy = "0.19.0"
pyo3 = { version = "0.19.1", features = ["extension-module"] }
